# MilRustRec

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
benches/: recommendation_bench.rs
config/: default.toml
examples/: basic_usage.rs
scripts/: start.sh  stop.sh  test_api.sh
src/: lib.rs  main.rs
src/algorithms/: initializer.rs  mod.rs  optimizer.rs  retriever.rs
src/config/: mod.rs
src/models/: mod.rs
src/services/: mod.rs
src/services/kafka/: mod.rs
src/services/recommendation/: mod.rs
src/services/serving/: mod.rs
src/services/training/: mod.rs
src/services/vector_db/: mod.rs
src/utils/: metrics.rs  mod.rs  validation.rs
tests/: integration_test.rs
