[package]
name = "milvuso"
version = "0.1.0"
edition = "2021"
authors = ["Milvus Team"]
description = "High-performance vector database based recommendation system"
license = "Apache-2.0"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Vector database (using a mock implementation for now)
# milvus = "0.2"

# Kafka
rdkafka = { version = "0.36", features = ["dynamic-linking"] }

# Numerical computing
ndarray = "0.15"
nalgebra = "0.32"
rand = "0.8"

# Async and concurrency
async-trait = "0.1"
futures = "0.3"
rayon = "1.8"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.0"

# Performance
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "milvuso-server"
path = "src/main.rs"

[[bin]]
name = "milvuso-trainer"
path = "src/bin/trainer.rs"

[[bin]]
name = "milvuso-worker"
path = "src/bin/worker.rs"

[[bench]]
name = "recommendation_bench"
harness = false
